[package]
name = "emarfcore_rs_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.8.0"

[dependencies]
truck-modeling  = "0.5.1"
truck-polymesh  = "0.5.0"
truck-meshalgo  = "0.3.0"
truck-topology = "0.5.0"
cgmath = "0.18.0"